--- a/TwitterBotSample/packages.config
+++ b/TwitterBotSample/packages.config
@@ -1,34 +1,47 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.6.2" targetFramework="net461" />
+  <package id="Autofac" version="5.2.0" targetFramework="net461" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.5" targetFramework="net461" />
   <package id="Microsoft.Azure.WebJobs" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Azure.WebJobs.Core" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Bot.Builder" version="3.12.2.4" targetFramework="net461" />
-  <package id="Microsoft.Bot.Connector" version="3.12.2.4" targetFramework="net461" />
+  <package id="Microsoft.Bot.Connector" version="4.10.3" targetFramework="net461" />
   <package id="Microsoft.Bot.Connector.DirectLine" version="3.0.2" targetFramework="net461" />
-  <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="net461" />
-  <package id="Microsoft.Data.OData" version="5.8.3" targetFramework="net461" />
-  <package id="Microsoft.Data.Services.Client" version="5.8.3" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.2.0" targetFramework="net461" />
+  <package id="Microsoft.Bot.Schema" version="4.10.3" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.8.4" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Protocols" version="5.2.0" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.2.0" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.2.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Protocols" version="5.6.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.6.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.10" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.21" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
-  <package id="NETStandard.Library" version="2.0.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
-  <package id="Nito.AsyncEx.Context" version="1.1.0" targetFramework="net461" />
-  <package id="Nito.AsyncEx.Tasks" version="1.1.0" targetFramework="net461" />
-  <package id="Nito.Disposables" version="1.2.3" targetFramework="net461" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="Nito.AsyncEx.Context" version="5.0.0" targetFramework="net461" />
+  <package id="Nito.AsyncEx.Tasks" version="5.0.0" targetFramework="net461" />
+  <package id="Nito.Disposables" version="2.0.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net461" />
@@ -38,7 +51,7 @@
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net461" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.0" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net461" />
   <package id="System.IO" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net461" />
@@ -46,16 +59,19 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reflection.TypeExtensions" version="4.4.0" targetFramework="net461" />
+  <package id="System.Reflection.TypeExtensions" version="4.5.1" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
@@ -65,16 +81,17 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
-  <package id="System.Spatial" version="5.8.3" targetFramework="net461" />
+  <package id="System.Spatial" version="5.8.4" targetFramework="net461" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
-  <package id="TweetinviAPI" version="2.1.0" targetFramework="net461" />
+  <package id="TweetinviAPI" version="4.0.3" targetFramework="net461" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="8.7.0" targetFramework="net461" />
 </packages>
