--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -13,11 +12,6 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1
-        # XXX これ絶対違う
-        # 意味わからん どこにトークン指定するねん
-        # - https://docs.github.com/ja/packages/using-github-packages-with-your-projects-ecosystem/configuring-dotnet-cli-for-use-with-github-packages#authenticating-to-github-packages 
-        # - https://docs.github.com/ja/actions/configuring-and-managing-workflows/authenticating-with-the-github_token
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Install dependencies
       run: dotnet restore
     - name: Build
@@ -29,4 +23,4 @@ jobs:
 
     # https://docs.github.com/ja/packages/using-github-packages-with-your-projects-ecosystem/configuring-dotnet-cli-for-use-with-github-packages
     - name: Push NuGet Package
-      run: dotnet nuget push "./TwitterBotFWIntegration/bin/Release/TwitterBotFWIntegration.1.0.0.nupkg" --source "github"
+      run: dotnet nuget push "./TwitterBotFWIntegration/bin/Release/TwitterBotFWIntegration.1.0.0.nupkg" --source "github" --api-key "${{ secrets.GITHUB_TOKEN }}"
