--- a/TwitterBotFWIntegration/TwitterBotFWIntegration.csproj
+++ b/TwitterBotFWIntegration/TwitterBotFWIntegration.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.0.0</Version>
+    <PackageProjectUrl>https://github.com/7474/twitter-bot-fw-integration</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/7474/twitter-bot-fw-integration</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
