--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ on:
     types: [created]
 
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,6 +23,6 @@ jobs:
 
     # https://docs.github.com/ja/packages/using-github-packages-with-your-projects-ecosystem/configuring-dotnet-cli-for-use-with-github-packages
     - name: Add NuGet Package Source
-      run: dotnet nuget add source https://nuget.pkg.github.com/7474/index.json -n github -u 7474 -p GH_TOKEN "${{ secrets.GITHUB_TOKEN }}"
+      run: dotnet nuget add source https://nuget.pkg.github.com/7474/index.json -n github -u 7474 -p GH_TOKEN
     - name: Push NuGet Package
-      run: dotnet nuget push "./TwitterBotFWIntegration/bin/Release/TwitterBotFWIntegration.1.0.0.nupkg" --source "github"
+      run: dotnet nuget push "./TwitterBotFWIntegration/bin/Release/TwitterBotFWIntegration.1.0.0.nupkg" --source "github" --api-key  "${{ secrets.GITHUB_TOKEN }}"
