--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Add NuGet Package Source
       run: dotnet nuget add source https://nuget.pkg.github.com/7474/index.json -n github -u 7474 -p "${{ secrets.GITHUB_TOKEN }}" --store-password-in-clear-text
     - name: Push NuGet Package
-      run: dotnet nuget push "./TwitterBotFWIntegration/bin/Release/TwitterBotFWIntegration.1.0.0.nupkg" --source "github"
+      run: dotnet nuget push "./TwitterBotFWIntegration/bin/Release/TwitterBotFWIntegration.*.nupkg" --source "github"
